--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<div id = "root"></div>
 
-<script type="text/javascript" src = "http://localhost:8080/static/index.js">
+<script type="text/javascript" src = "./static/index.js">
 	
 </script>
 
